--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico"/>
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <meta name="viewport" content="initial-scale=1; width=device-width; viewport-fit=cover" />
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="/logo192.png" />
       <meta name="apple-mobile-web-app-capable" content="yes">
+      <meta name="mobile-web-app-capable" content="yes">
       <meta name="apple-mobile-web-app-status-bar-style" content="default">
       <meta name="apple-mobile-web-app-title" content="Beach směny">
 
