--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,9 +9,9 @@
       <meta name="apple-mobile-web-app-status-bar-style" content="default">
       <meta name="apple-mobile-web-app-title" content="Beach směny">
       <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-      <link rel="apple-touch-icon" sizes="192x192" href="/logo192.png">
+      <link rel="apple-touch-icon" sizes="192x192" href="logo192.png">
 
-      <link rel="manifest" href="/manifest.json">
+      <link rel="manifest" href="manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nova+Mono&display=swap" rel="stylesheet">
