--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,8 +7,7 @@
 
       <meta name="apple-mobile-web-app-capable" content="yes">
       <meta name="apple-mobile-web-app-status-bar-style" content="default">
-      <meta name="apple-mobile-web-app-title" content="Beach směny">
-      <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+      <meta name="mobile-web-app-capable" content="yes">
       <link rel="apple-touch-icon" sizes="192x192" href="logo192.png">
 
       <link rel="manifest" href="manifest.json">
