--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="theme-color" content="#f8fafd">
 
       <meta name="apple-mobile-web-app-capable" content="yes">
+      <meta name="apple-mobile-web-app-status-bar-style" content="default">
       <meta name="apple-mobile-web-app-status-bar-style" content="default">
       <meta name="mobile-web-app-capable" content="yes">
       <link rel="apple-touch-icon" sizes="192x192" href="logo192.png">
